test/cases/compile_errors/invalid_legacy_unicode_escape.zig
export fn entry() void {
    const a = '\U1234';
}

// error
//
// :2:17: error: invalid escape character: 'U'
